updated index and adding css file

--- a/index.html
+++ b/index.html
@@ -1,2 +1,80 @@
 <!DOCTYPE HTML>
-<
+<html>
+<head>
+
+	<link rel="stylesheet" type="text/css" href="lighthouse.css">
+	<title>Home page</title>
+<body>
+	<div class="logo"> 
+		<p>
+			LOGO
+		</p>	
+	</div>
+	<nav class="main">
+		<ul class="main">
+			<li class="main">
+				Home
+
+			</li>
+			<li class="main">
+				Our Story
+
+			</li>
+			<li class="main">
+				Donate
+
+			</li>
+			<li class="main">
+				Our Entreprenuers
+
+			</li>
+
+		</ul>
+	</nav>
+	<button class="topdonate">
+
+
+	</button>
+	
+	<div class="page_container">
+		<div id="main_contaniner">
+			<img src="URL" class="main_image">
+			Lorem ipsum
+
+		</div>
+	</div>
+
+	<div id="footer">
+		<ul id="footer">
+			<li id="footer">
+				Home
+
+			</li>
+			<li id="footer">
+				Our Story
+
+			</li>
+			<li id="footer">
+				Donate
+
+			</li>
+			<li id="footer">
+				Our Entreprenuers
+
+			</li>
+
+		</ul>
+	</div>
+
+
+
+</body>
+
+
+</head>
+
+
+
+
+
+</html>
