donation page and css updates for donation and timeline pages

--- a/timeline.html
+++ b/timeline.html
@@ -13,7 +13,8 @@
 				<li class="main">Donate</li>
 				<li class="main">Our Entreprenuers</li>
 
-		</ul>
+			</ul>
+		</nav>
 
 			<div class="page_container">
 				<ul class = "timeline">
