Ensured that all of the footers had hyperlinks

--- a/donate.html
+++ b/donate.html
@@ -9,10 +9,10 @@
 	<body>
 		<nav class="main">
 			<ul class="main">
-				<li class="main">Home</li>
-				<li class="main">Our Story</li>
-				<li class="main">Donate</li>
-				<li class="main">Our Entreprenuers</li>
+				<li class="main"><a href = "index.html">Home</li>
+				<li class="main"><a href = "timeline.html">Our Story</li>
+				<li class="main"><a href = "donate.html">Donate</li>
+				<li class="main"><a href = "entreprenuers.html">Our Entreprenuers</li>
 
 			</ul>
 		</nav>
@@ -38,6 +38,26 @@
 
 			</form>
 
-		</div class="page_container">
+			<div id="footer">
+				<ul id="footer">
+					<li id="footer"><a href = "index.html">
+					Home
+
+					</li>
+					<li id="footer"><a href = "timeline.html">
+						Our Story
+
+					</li>
+					<li id="footer"><a href = "donate.html">
+						Donate
+
+					</li>
+					<li id="footer"><a href = "entreprenuers.html">
+						Our Entreprenuers
+
+					</li>
+
+				</ul>
+			</div>
 
 	</body>
