--- a/index.html
+++ b/index.html
@@ -71,19 +71,19 @@
 
 	<div id="footer">
 		<ul id="footer">
-			<li id="footer">
+			<li id="footer"><a href = "index.html">
 				Home
 
 			</li>
-			<li id="footer">
+			<li id="footer"><a href = "timeline.html">
 				Our Story
 
 			</li>
-			<li id="footer">
+			<li id="footer"><a href = "donate.html">
 				Donate
 
 			</li>
-			<li id="footer">
+			<li id="footer"><a href = "entreprenuers.html">
 				Our Entreprenuers
 
 			</li>
