--- a/donate.html
+++ b/donate.html
@@ -9,10 +9,10 @@
 	<body>
 		<nav class="main">
 			<ul class="main">
-				<li class="main"><a href = "index.html">Home</li>
-				<li class="main"><a href = "timeline.html">Our Story</li>
-				<li class="main"><a href = "donate.html">Donate</li>
-				<li class="main"><a href = "entreprenuers.html">Our Entreprenuers</li>
+				<li class="main"><a href = "index.html">Home</a></li>
+				<li class="main"><a href = "timeline.html">Our Story</a></li>
+				<li class="main"><a href = "donate.html">Donate</a></li>
+				<li class="main"><a href = "entreprenuers.html">Our Entreprenuers</a></li>
 
 			</ul>
 		</nav>
