--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
 			</li>
 			<li class="main">
-				<a href="donate.html"></a>
-				Donate
+				<a href="donate.html">Donate</a>
+				
 
 			</li>
 			<li class="main">
